tests shop + ajustements